--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsa aliquam quia deserunt obcaecati non nam quibusdam excepturi doloremque inventore! Aspernatur aperiam praesentium quis nostrum velit vel laborum perferendis facilis.</p>
 </body>
 </html>
